# nox-mcp

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cspell.json  noxfile.py  pyproject.toml
.github/workflows/: publish-test-pypi.yaml  release.yaml  run-checks.yaml
docs/source/: conf.py  index.md
docs/source/development/: contributing.md
docs/source/getting_started/: installation.md  quickstart.md
src/nox_mcp/: server.py
tests/: test_server.py
